--- a/Experiment_Results/MVG_RL_ML/recovery_config.yaml
+++ b/Experiment_Results/MVG_RL_ML/recovery_config.yaml
@@ -14,6 +14,19 @@ HyperParameters:
 ModelParameters:
   _target_: experiment_params.ModelParameters
   model_class: MultivariateGaussianModel
+  target_params:
+    mu:
+      _target_: helper_tools.convert_to_tensor
+      data:
+      - 3.0
+      - 3.0
+    Sigma:
+      _target_: helper_tools.convert_to_tensor
+      data:
+      - - 2.0
+        - 0.0
+      - - 0.0
+        - 2.0
   start_params:
     mu_0:
       _target_: helper_tools.convert_to_tensor
@@ -37,19 +50,6 @@ SamplingParameters:
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.10000000149011612
-  start_batch:
-    _target_: helper_tools.convert_to_tensor
-    data:
-    - - 0.0
-      - 0.0
-    - - 0.0
-      - 0.0
-    - - 0.0
-      - 0.0
-    - - 0.0
-      - 0.0
-    - - 0.0
-      - 0.0
   L: 3
   M:
     _target_: helper_tools.convert_to_tensor
