Made scheduler optional in ExperimentBuilder and TrainingProcedure: Simply not including it in the HyperParameters will make it Null in the config and None in the rest, scheduling step is then skipped in the TrainingProcedure

--- a/Experiment_Results/MVG_RL_ML/recovery_config.yaml
+++ b/Experiment_Results/MVG_RL_ML/recovery_config.yaml
@@ -7,8 +7,8 @@ HyperParameters:
   likelihood_class: RecoveryLikelihood
   optimizer_class: Adam
   optimizer_params:
-    lr: 0.05
-  scheduler_class: ExponentialLR
+    lr: 0.01
+  scheduler_class: null
   scheduler_params:
     gamma: 0.9
 ModelParameters:
