Poly Experiment after adaptation to remove W_0

--- a/Experiment_Results/MVG_RL_ML/marginal_config.yaml
+++ b/Experiment_Results/MVG_RL_ML/marginal_config.yaml
@@ -46,7 +46,7 @@ ModelParameters:
     data: 1.0
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: MALASampler
+  sampler_class: ULASampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.10000000149011612
