--- a/Experiment_Results/MVG_RL_ML/marginal_config.yaml
+++ b/Experiment_Results/MVG_RL_ML/marginal_config.yaml
@@ -1,13 +1,13 @@
 HyperParameters:
   _target_: experiment_params.HyperParameters
   batch_size: 200
-  epochs: 20
-  burnin_offset: 50
+  epochs: 10
+  burnin_offset: 100
   model_batch_size: 200
   likelihood_class: Likelihood
   optimizer_class: Adam
   optimizer_params:
-    lr: 0.01
+    lr: 0.2
   scheduler_class: null
   scheduler_params:
     gamma: 0.9
@@ -46,7 +46,7 @@ ModelParameters:
     data: 1.0
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: ULASampler
+  sampler_class: MALASampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.10000000149011612
