--- a/Experiment_Results/GMM_RL_ML/marginal_config.yaml
+++ b/Experiment_Results/GMM_RL_ML/marginal_config.yaml
@@ -4,7 +4,7 @@ HyperParameters:
   epochs: 10
   burnin_offset: 100
   model_batch_size: 200
-  likelihood_class: RecoveryLikelihood
+  likelihood_class: Likelihood
   optimizer_class: Adam
   optimizer_params:
     lr: 0.002
@@ -74,10 +74,10 @@ ModelParameters:
         - 0.0
       - - 0.0
         - 2.0
-  requires_adapter: true
+  requires_adapter: false
   perturbation_var:
     _target_: helper_tools.convert_to_tensor
-    data: 0.5
+    data: 1.0
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
   sampler_class: ULASampler
