--- a/Experiment_Results/POLY_RL_ML/recovery_config.yaml
+++ b/Experiment_Results/POLY_RL_ML/recovery_config.yaml
@@ -36,7 +36,7 @@ ModelParameters:
     data: 1.0
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: HMCSampler
+  sampler_class: ULASampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.10000000149011612
