--- a/Experiment_Results/MVG_RL_ML/marginal_config.yaml
+++ b/Experiment_Results/MVG_RL_ML/marginal_config.yaml
@@ -46,10 +46,10 @@ ModelParameters:
     data: 1.0
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: ULASampler
+  sampler_class: HMCSampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
-    data: 0.10000000149011612
+    data: 0.1
   L: 3
   M:
     _target_: helper_tools.convert_to_tensor
