--- a/Experiment_Results/POLY_RL_ML/marginal_config.yaml
+++ b/Experiment_Results/POLY_RL_ML/marginal_config.yaml
@@ -2,7 +2,7 @@ HyperParameters:
   _target_: experiment_params.HyperParameters
   batch_size: 200
   epochs: 10
-  burnin_offset: 50
+  burnin_offset: 10
   model_batch_size: 200
   likelihood_class: Likelihood
   optimizer_class: Adam
@@ -36,7 +36,7 @@ ModelParameters:
     data: 1.0
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: ULASampler
+  sampler_class: HMCSampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.10000000149011612
