--- a/Experiment_Results/POLY_RL_ML/recovery_config.yaml
+++ b/Experiment_Results/POLY_RL_ML/recovery_config.yaml
@@ -33,10 +33,10 @@ ModelParameters:
   requires_adapter: true
   perturbation_var:
     _target_: helper_tools.convert_to_tensor
-    data: 1.0
+    data: 0.1
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: ULASampler
+  sampler_class: HMCSampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.10000000149011612
