--- a/Experiment_Results/COS_RL_ML/recovery_config.yaml
+++ b/Experiment_Results/COS_RL_ML/recovery_config.yaml
@@ -2,12 +2,12 @@ HyperParameters:
   _target_: experiment_params.HyperParameters
   batch_size: 200
   epochs: 10
-  burnin_offset: 20
-  model_batch_size: 200
+  burnin_offset: 100
+  model_batch_size: 20000
   likelihood_class: RecoveryLikelihood
   optimizer_class: Adam
   optimizer_params:
-    lr: 0.02
+    lr: 0.2
   scheduler_class: null
   scheduler_params:
     gamma: 0.9
@@ -34,11 +34,11 @@ ModelParameters:
     data: 0.5
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: HMCSampler
+  sampler_class: MALASampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.01
-  L: 5
+  L: 3
   M:
     _target_: helper_tools.convert_to_tensor
     data:
