--- a/Experiment_Results/POLY_RL_ML/recovery_config.yaml
+++ b/Experiment_Results/POLY_RL_ML/recovery_config.yaml
@@ -2,7 +2,7 @@ HyperParameters:
   _target_: experiment_params.HyperParameters
   batch_size: 200
   epochs: 10
-  burnin_offset: 50
+  burnin_offset: 20
   model_batch_size: 200
   likelihood_class: RecoveryLikelihood
   optimizer_class: Adam
@@ -33,13 +33,13 @@ ModelParameters:
   requires_adapter: true
   perturbation_var:
     _target_: helper_tools.convert_to_tensor
-    data: 0.1
+    data: 0.5
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: HMCSampler
+  sampler_class: ULASampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
-    data: 0.10000000149011612
+    data: 0.01
   L: 3
   M:
     _target_: helper_tools.convert_to_tensor
