--- a/Experiment_Results/COS_RL_ML/marginal_config.yaml
+++ b/Experiment_Results/COS_RL_ML/marginal_config.yaml
@@ -2,12 +2,12 @@ HyperParameters:
   _target_: experiment_params.HyperParameters
   batch_size: 200
   epochs: 10
-  burnin_offset: 100
-  model_batch_size: 200
+  burnin_offset: 1
+  model_batch_size: 1000
   likelihood_class: Likelihood
   optimizer_class: Adam
   optimizer_params:
-    lr: 0.2
+    lr: 0.1
   scheduler_class: null
   scheduler_params:
     gamma: 0.9
@@ -34,10 +34,10 @@ ModelParameters:
     data: 1.0
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: HMCSampler
+  sampler_class: MALASampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
-    data: 0.1
+    data: 0.01
   L: 3
   M:
     _target_: helper_tools.convert_to_tensor
