--- a/Experiment_Results/COS_RL_ML/recovery_config.yaml
+++ b/Experiment_Results/COS_RL_ML/recovery_config.yaml
@@ -2,7 +2,7 @@ HyperParameters:
   _target_: experiment_params.HyperParameters
   batch_size: 200
   epochs: 10
-  burnin_offset: 1
+  burnin_offset: 20
   model_batch_size: 1000
   likelihood_class: RecoveryLikelihood
   optimizer_class: Adam
@@ -34,7 +34,7 @@ ModelParameters:
     data: 1.5
 SamplingParameters:
   _target_: experiment_params.SamplingParameters
-  sampler_class: MALASampler
+  sampler_class: HMCSampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
     data: 0.1
