--- a/Experiment_Results/GMM_RL_ML/marginal_config.yaml
+++ b/Experiment_Results/GMM_RL_ML/marginal_config.yaml
@@ -1,5 +1,5 @@
 HyperParameters:
-  _target_: experiment_params.HyperParameters
+  _target_: likelihood_inference.HyperParameters
   batch_size: 200
   epochs: 10
   burnin_offset: 30
@@ -12,7 +12,7 @@ HyperParameters:
   scheduler_params:
     gamma: 0.9
 ModelParameters:
-  _target_: experiment_params.ModelParameters
+  _target_: likelihood_inference.ModelParameters
   model_class: SimpleGaussianMixtureModel
   target_params:
     W:
@@ -79,7 +79,7 @@ ModelParameters:
     _target_: helper_tools.convert_to_tensor
     data: 1.0
 SamplingParameters:
-  _target_: experiment_params.SamplingParameters
+  _target_: likelihood_inference.SamplingParameters
   sampler_class: ULASampler
   epsilon:
     _target_: helper_tools.convert_to_tensor
